add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    Second_Attempt
+    <link rel="stylesheet" href="style.css" />
+    <title>Second_Attempt</title>
   </head>
   <body>
     <h1>Welcome!</h1>
