add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <h3>...or as Nug would say, <em>"Mmrow?"</em></h3>
+    <h3>...or as Nug would say,</h3>
+    <h1><em>"Mmrow?"</em></h1>
+    <script src="script.js"></script>
   </body>
 </html>
