pounce nug images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <h3>...or as Nug would say,</h3>
+    <h3>...or as Nugget would say,</h3>
     <h1><em>"Mmrow?"</em></h1>
+    <img
+      src="2117D878-25A2-4914-887A-3A9CB4004E5C_1_105_c.jpeg"
+      alt="pet nug"
+      title="Pet Nug!"
+      width="700"
+      height="500"
+      usemap="#petmap"
+    />
+    <map name="petmap">
+      <area shape="circle" coords="400,250,50" href="pounce.html" />
+    </map>
     <script src="script.js"></script>
   </body>
 </html>
