color and content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <map name="petmap">
       <area shape="circle" coords="400,250,50" href="pounce.html" />
     </map>
+    <p>
+      Looks like Nugget wants to be pet. Go ahead and give Nugget a head pet by
+      clicking on her head in the picture above.
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
