--- a/pounce.html
+++ b/pounce.html
@@ -1,7 +1,32 @@
-<img
-  src="8B25526D-F6E2-412D-9A2C-9F4D266FB5FE_1_105_c.jpeg"
-  alt="pounce"
-  title="POUNCE!"
-  width="700"
-  height="500"
-/>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Second_Attempt</title>
+  </head>
+  <body>
+    <h1>POUNCE!</h1>
+    <p>
+      Oh no! Nug perceived your hand as a cat toy. She pounces to the attack
+      instead!
+    </p>
+    <h2><em>"RAWR!"</em></h2>
+    <img
+      src="8B25526D-F6E2-412D-9A2C-9F4D266FB5FE_1_105_c.jpeg"
+      alt="pounce"
+      title="POUNCE!"
+      width="700"
+      height="500"
+    />
+    <div id="text-box">
+      <p>
+        <strong>Fun Fact:</strong> Did you know that "Rawr" means "I love you in
+        dinosaur"?
+        <br />
+        Yes, Nugget speaks dinosaur.
+        <br />
+        And she loves you.
+      </p>
+    </div>
+  </body>
+</html>
